--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ Alarm screen here
 		</div>	
 	<div data-role="footer">
 		<div id="nextalarmtime" style="text-align:center">The next is in 8 hours and 43 minutes</div>
-	<div></div>	
-
+	</div>
+</div>	
 
 <div data-role="page" id="setlover" data-add-back-btn="true">
 	<div data-role="header">
