--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="jquery-mobile/jquery.mobile.theme-1.3.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="jquery-mobile/jquery.mobile.structure-1.3.0.min.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" /> 
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script src="jquery-mobile/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
 
@@ -147,7 +148,7 @@ Alarm screen here
 		<h1>Credits</h1>
 	</div>
 	<div data-role="content">	
-		Content		
+		Luvalarm was created by Andy Hickey of Netamity with the kind assistance of Yossi Yoffe, Rob Jenkins, Laura 
 	</div>
 	<div data-role="footer">
 		<h4>&copy;2014 Netamity</h4>
